# SuperGateway

./: .gitignore  .gitmodules  README.md
config/: def_config  def_config_mt7688
doc/: ezmesh_userguide.md
package/project-chip/chip/: Config.in  Makefile
package/project-chip/chip/chip-bridge/: Makefile
package/project-chip/chip/chip-bridge/src/: BUILD.gn  Device.cpp  bridged-actions-stub.cpp  main.cpp  main_backup.cpp
package/project-chip/chip/chip-bridge/src/bridge/: ApplicationCluster.cpp  Bridged.cpp  BridgedInit.cpp  ClusterBase.cpp  DeviceLibrary.cpp  SingletonBridgedManager.cpp  bridged-actions-stub.cpp
package/project-chip/chip/chip-bridge/src/bridge/include/: ApplicationCluster.h  Bridged.h  BridgedInit.h  BridgedManager.h  ClusterBase.h  ClusterDefine.h  ClusterMacro.h  DeviceBase.h  DeviceLibrary.h  bridged-actions-stub.h
package/project-chip/chip/chip-bridge/src/bridged_platfrom/: Device.cpp  Device.h  ExampleBridgedImp.cpp  ExampleBridgedImp.h
package/project-chip/chip/chip-bridge/src/bridged_platfrom/virtual_device/: ExampleBridgedImp.cpp  ExampleBridgedImp.h
package/project-chip/chip/chip-bridge/src/bridged_platfrom/virtual_device/platfrom/: Device.cpp  Device.h  cli.c  cli.h  cli_interface.cpp
package/project-chip/chip/chip-bridge/src/include/: Device.h
package/project-chip/chip/chip-bridge/src/utlity/config/: INIConfig.cpp  INIConfig.h  ini.h
package/project-chip/chip/chip-ota-provider/: Makefile
package/project-chip/chip/chip-tool/: Makefile
package/project-chip/chip/devel/gn/: Makefile
scripts/: bootstrap  bootstrap_mt7688  build_image  restore_default  setup_ssid
